--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   Continuous-Integration:
-      runs-on: ubuntu-lates
+      runs-on: ubuntu-latest
 
       steps:
         - name: Checkout
